# sit-portal-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Procfile  README.md  docker-compose.yml  logging_config.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  supervisord.conf
.claude/: settings.local.json
app/: celery.py  main.py  start_apps.py  temp.py
app/config/: celeryconfig.py  settings.py
app/db/: custom_types.py  db.py  models.py  session.py
app/db/seed/: main.py  seed_certificate_types.py  seed_notification_channel_templates.py  seed_notification_types.py  seed_permissions.py  seed_program_requirement_schedules.py  seed_program_requirements.py  seed_programs.py  seed_roles.py
app/db/seeds/: academic_years_seed.py  certificate_types_seed.py  dashboard_stats_seed.py  main.py  notification_channel_templates_seed.py  notification_types_seed.py  permissions_seed.py  program_requirement_schedules_seed.py  program_requirements_seed.py  programs_seed.py  roles_seed.py  staff_permissions_seed.py  users_students_seed.py  usres_staff_seed.py
app/middlewares/: __init__.py  auth_middleware.py  dependent_auth_middleware.py  request_id_middleware.py  security_middleware.py
app/models/: staff_models.py  template_models.py
app/providers/: collected_utils_provider.py  dashboard_stats_provider.py  langchain_service_provider.py  notification_service_provider.py  student_data_provider.py  text_extraction_provider.py  text_extractor.py  web_scraper.py
app/routers/: __init__.py  auth.py  main.py  main_router.py  sitbrain.py  staff.py  staff_router.py  student.py  student_router.py  webhook.py
app/routers/_old_routers/: minio.py  staff.py  student.py
app/routers/shared/: __init__.py  auth.py  bugs.py  health.py  minio.py  notifications.py  storage.py
app/routers/staff/: __init__.py  academic_years.py  certificates.py  dashboard_stats.py  program_requirement_schedules.py  program_requirements.py  programs.py  students.py  submissions.py
app/routers/student/: __init__.py  profile.py  requirements.py  submissions.py
app/schemas/: auth_schemas.py  camel_base_model.py  citi_template_schemas.py  minio_schemas.py  notification_schemas.py  response_schemas.py  staff_schemas.py
app/services/: auth_service.py  certificate_service.py  citi_automation_service.py  dashboard_stats_service.py  document_service.py  langchain_service.py  line_token_management_service.py  minio_service.py  notification_service.py  program_requirement_schedule_service.py  program_requirement_service.py  program_service.py  student_service.py  student_service_provider.py  submission_service.py
app/tasks/: __init__.py  annual_requirement_archiver.py  bugs.py  citi_cert_verification_task.py  daily_notification_expiration.py  daily_requirement_schedule_notifier.py  daily_scheduled_processor.py  line_notification_sender.py  line_token_manager.py  monthly_schedule_creator.py  notification_creation.py  notification_processing.py  scheduled_notifications.py
app/templates/: citi_program_template.py
app/utils/: auth.py  context.py  cookies.py  datetime_utils.py  error_handlers.py  errors.py  global_context.py  logging.py  responses.py  string_utils.py
docker/: Dockerfile.celery  Dockerfile.fastapi
docs/: database-design-logic.md  monthly-schedule-creator-logic.md  notification-logic.md
tests/: conftest.py  test_annual_requirement_archiver.py  test_monthly_schedule_creator.py
(+54 files in other folders)
