[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "celery[redis]>=5.5.3",
    "fastapi[standard]>=0.116.1",
    "jwcrypto>=1.5.6",
    "langchain[openai]>=0.3.27",
    "ldap3>=2.9.1",
    "loguru>=0.7.3",
    "minio>=7.2.16",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pymupdf>=1.26.4",
    "pyodbc>=5.2.0",
    "pytesseract>=0.3.13",
    "pytest-playwright>=0.7.1",
    "sqlalchemy>=2.0.43",
]
